--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <div class="casanik" id="dois">b</div>
         <div class="casanik" id="tres">c</div>
     </div>
+
+    <button id="botao" onclick="girar()">Girar</button>
 </body>
 </html>
