casanik feito com sucesso

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <h1>Primeiro Casanik</h1>
 
     <div id="container">
-        <div class="casanik" id="um">a</div>
-        <div class="casanik" id="dois">b</div>
-        <div class="casanik" id="tres">c</div>
+        <div class="casanik" id="um"></div>
+        <div class="casanik" id="dois"></div>
+        <div class="casanik" id="tres"></div>
     </div>
 
     <button id="botao" onclick="girar()">Girar</button>
+
+    <p id="res"></p>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
