atualização do casanik

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <h1>Primeiro Casanik</h1>
 
-    <div id="container">
-        <div class="casanik" id="um"></div>
-        <div class="casanik" id="dois"></div>
-        <div class="casanik" id="tres"></div>
+    <div id="container-casanik">
+        <div id="container">
+            <div class="casanik" id="um"></div>
+            <div class="casanik" id="dois"></div>
+            <div class="casanik" id="tres"></div>
+        </div>
     </div>
 
     <button id="botao" onclick="girar()">Girar</button>
