--- a/index.html
+++ b/index.html
@@ -27,16 +27,31 @@
 
     <p id="res"></p>
 
-    <div>
-        <div>
+    <footer class="tabela-container">
+        <table class="tabela">
             <h2>Tabela de coins</h2>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-        </div>
-    </div>
+            <tr class="points">
+                <td>🍒</td>
+                <td>10 moedas</td>
+            </tr>
+            <tr class="points">
+                <td>🍋</td>
+                <td>15 moedas</td>
+            </tr>
+            <tr class="points">
+                <td>🔔</td>
+                <td>25 moedas</td>
+            </tr>
+            <tr class="points">
+                <td>⭐</td>
+                <td>40 moedas</td>
+            </tr>
+            <tr class="points">
+                <td>💎</td>
+                <td>100 moedas</td>
+            </tr>
+        </table>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
