--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div id="conteiner-saldo">
             <img src="imagem/coin.png" alt="coin">
-            <p id="saldo">R$</p>
+            <p>R$ <span id="saldo">0</span></p>
         </div>
     </header>
     <h1>Jogo da Sorte</h1>
@@ -29,7 +29,7 @@
 
     <footer class="tabela-container">
         <table class="tabela">
-            <h2>Tabela de coins</h2>
+            <h2 class="title-table">Tabela de coins</h2>
             <tr class="points">
                 <td>🍒</td>
                 <td>10 moedas</td>
