--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     </header>
     <h1>Jogo da Sorte</h1>
 
+    <div class="escondido">
+        <h2>Adicione um saldo</h2>
+        <div class="container-escondido">
+            <label for="add-saldo" id="adicionar">Adicione aqui!</label>
+            <input type="text" name="saldo" id="add-saldo">
+            <input type="button" value="Adicionar" id="add-btn">
+        </div>
+    </div>
+
     <div id="conteiner-casanik">
         <div id="container">
             <div class="casanik" id="um"></div>
