--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="container-escondido">
             <label for="add-saldo" id="adicionar">Adicione aqui!</label>
             <input type="text" name="saldo" id="add-saldo">
-            <input type="button" value="Adicionar" id="add-btn">
+            <input type="button" value="Adicionar" id="add-btn" class="btn-add">
+            <input type="button" value="Não Adicionar" id="naoadd-btn" class="btn-add">
         </div>
     </div>
 
