--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <h2>Adicione um saldo</h2>
         <div class="container-escondido">
             <label for="add-saldo" id="adicionar">Adicione aqui!</label>
-            <input type="text" name="saldo" id="add-saldo">
+            <input type="text" name="saldo" id="add-saldo" autocomplete="off">
             <input type="button" value="Adicionar" id="add-btn" class="btn-add">
             <input type="button" value="Não Adicionar" id="naoadd-btn" class="btn-add">
         </div>
+        <p>O valor mínimo é 50</p>
     </div>
 
     <div id="conteiner-casanik">
